[package]
name = "markdown-html-rs"
version = "1.0.0"
edition = "2021"
description = "A simple command line markdown to HTML converter"
readme = "README.md"
authors = [ "Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev>"]
repository = "https://github.com/sentinel1909/markdown-html-rs"
license = "MIT"
keywords = ["converter, markdown, HTML"]
categories = [ "CLI" ]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = [ "derive"] }
gray_matter = "0.2.6"
pulldown-cmark = { version = "0.9.3", default-features = false}
regex = "1.9.3"
serde = { version = "1.0.183", features = [ "derive" ] }
thiserror = "1.0.47"
