[package]
name = "markdown-html-rs"
version = "2.0.0"
edition = "2021"
description = "A simple command line markdown to HTML converter"
readme = "README.md"
authors = [ "Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev>"]
repository = "https://github.com/sentinel1909/markdown-html-rs"
license = "MIT"
keywords = ["converter, markdown, HTML"]
categories = [ "CLI" ]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = [ "derive"] }
color-eyre = "0.6.3"
gray_matter = "0.2.6"
pulldown-cmark = { version = "0.12.1", features = [ "html" ] }
regex = "1.10.3"
serde = { version = "1.0.197", features = [ "derive" ] }
serde_json = "1.0.114"
